--- a/public/lexnotes-skeleton.html
+++ b/public/lexnotes-skeleton.html
@@ -2487,15 +2487,7 @@ try{window.parent&&window.parent!==window&&window.parent.postMessage({type:'lexn
         'https://unpkg.com/react-dom@18.2.0/umd/react-dom.production.min.js',
         'https://cdnjs.cloudflare.com/ajax/libs/react-dom/18.2.0/umd/react-dom.production.min.js'
       ],'ReactDOM');
-      await loadWithFallback([
-        'https://cdn.jsdelivr.net/npm/@babel/standalone@7.23.2/babel.min.js',
-        'https://unpkg.com/@babel/standalone@7.23.2/babel.min.js',
-        'https://cdnjs.cloudflare.com/ajax/libs/babel-standalone/7.23.2/babel.min.js'
-      ],'Babel');
-
-      const src=document.getElementById('lexnotes-app-source')?.textContent||'';
-      const out=window.Babel.transform(src,{presets:['react']});
-      new Function(out.code)();
+      await loadScript('/lexnotes-app.compiled.js?v='+Date.now());
     }catch(err){
       showBootError((err&&err.message)||'Unknown startup error');
     }
